--- a/salt/nginx/admin.conf
+++ b/salt/nginx/admin.conf
@@ -1,5 +1,5 @@
 upstream admin {
-    server {{salt['mine.get'](pillar['minion_ids']+'admin','network.ip_addrs').values()[0][0]}}:{{pillar['admin'][port]}} max_fails=1 fail_timeout=45s;
+    server {{salt['mine.get'](pillar['minion_ids']+'admin','network.ip_addrs').values()[0][0]}}:{{pillar['port']['admin']}} max_fails=1 fail_timeout=45s;
     keepalive 64;
 }
 server {
