--- a/salt/nginx/web.conf
+++ b/salt/nginx/web.conf
@@ -1,5 +1,5 @@
 upstream web {
-    server {{salt['mine.get'](pillar['minion_ids']+'web','network.ip_addrs').values()[0][0]}}:{{pillar['web']['port']}} max_fails=1 fail_timeout=45s;
+    server {{salt['mine.get'](pillar['minion_ids']+'web','network.ip_addrs').values()[0][0]}}:{{pillar['port']['web']}} max_fails=1 fail_timeout=45s;
     keepalive 64;
 }
 server {
