--- a/salt/nginx/web.conf
+++ b/salt/nginx/web.conf
@@ -18,8 +18,8 @@ server {
     listen       443 ssl default;
     server_name  {{pillar['Domain']['web']}};
     add_header Strict-Transport-Security "max-age=31536000; includeSubdomains";
-    ssl_certificate  /etc/nginx/conf.d/{{pillar['ssl']['ssl_certificate']}};
-    ssl_certificate_key  /etc/nginx/conf.d/{{pillar['ssl']['ssl_certificate_key']}};
+    ssl_certificate  /etc/nginx/conf.d/{{pillar['ssl']['web_certificate']}};
+    ssl_certificate_key  /etc/nginx/conf.d/{{pillar['ssl']['web_certificate_key']}};
     ssl_protocols  TLSv1 TLSv1.2;
     ssl_ciphers 'AES128+EECDH:AES128+EDH:!aNULL';
     ssl_prefer_server_ciphers   on;
