--- a/salt/nginx/admin.conf
+++ b/salt/nginx/admin.conf
@@ -4,7 +4,27 @@ upstream admin {
 }
 server {
     listen       80;
+    server_name  _;
+    return 301 https://{{pillar['Domain']['admin']}};
+}
+
+server {
+    listen       80 default;
     server_name  {{pillar['Domain']['admin']}};
+    return 301 https://{{pillar['Domain']['admin']}}$request_uri;
+}
+
+server {
+    listen       443 ssl default;
+    server_name  {{pillar['Domain']['admin']}};
+    add_header Strict-Transport-Security "max-age=31536000; includeSubdomains";
+    ssl_certificate  /etc/nginx/conf.d/{{pillar['ssl']['admin_certificate']}};
+    ssl_certificate_key  /etc/nginx/conf.d/{{pillar['ssl']['admin_certificate_key']}};
+    ssl_protocols  TLSv1 TLSv1.2;
+    ssl_ciphers 'AES128+EECDH:AES128+EDH:!aNULL';
+    ssl_prefer_server_ciphers   on;
+    ssl_session_cache   shared:ssl:5m;
+    ssl_session_timeout  10m;
 
     charset utf-8;
     access_log  /var/log/nginx/log/admin.access.log  main;
