添加 limit_conn addr 配置

--- a/salt/nginx/web.conf
+++ b/salt/nginx/web.conf
@@ -55,6 +55,13 @@ server {
         expires 30d;
     }
 
+    location ~* \.(mp4|apk)$ {
+        root {{pillar['StaticPath']}};
+        limit_conn addr 6;
+        limit_rate 300k;
+	expires 30d;
+    }
+
     location ~ /\. {
         deny all;
     }
