--- a/salt/nginx/web.conf
+++ b/salt/nginx/web.conf
@@ -5,13 +5,13 @@ upstream web {
 server {
     listen       80;
     server_name  _;
-    return 301 https://{{pillar['Domain']['web']}};
+    return 301 https://$host;
 }
 
 server {
     listen       80 default;
     server_name  {{pillar['Domain']['web']}};
-    return 301 https://{{pillar['Domain']['web']}}$request_uri;
+    return 301 https://$host$request_uri;
 }
 
 server {
